--- a/app/src/main/res/layout/activity_register_freelancer.xml
+++ b/app/src/main/res/layout/activity_register_freelancer.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -22,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/rubik_bold"
-                android:text="Welcome"
+                android:text="@string/easy_freelancer"
                 android:textAlignment="center"
                 android:textColor="@color/colorTitles"
                 android:textSize="24sp"
@@ -74,7 +75,6 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
-                android:elevation="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_photo_register">
@@ -86,7 +86,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/img_customer_approach" />
+                        android:background="@drawable/img_register_freelancer" />
 
                 </LinearLayout>
 
@@ -246,13 +246,14 @@
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/button_orange_rounded"
                 android:text="@string/create_an_account"
                 android:textColor="@android:color/white"
                 android:textSize="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_cpf" />
