--- a/app/src/main/res/layout/layout_list_publications.xml
+++ b/app/src/main/res/layout/layout_list_publications.xml
@@ -104,8 +104,9 @@
             android:id="@+id/ivPublication"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_marginTop="11dp"
-            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
