--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,7 +47,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/rubik_bold"
-            android:text="Allan Jackson"
+            android:text="Leonardo Torres"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
