--- a/app/src/main/res/layout/activity_publish.xml
+++ b/app/src/main/res/layout/activity_publish.xml
@@ -18,245 +18,122 @@
             android:layout_height="800dp">
 
             <TextView
-                android:id="@+id/tv_welcome"
+                android:id="@+id/tv_create_publication"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/rubik_bold"
-                android:text="Bem Vindo ao JobLink"
-                android:textAlignment="center"
-                android:textColor="@color/colorTitles"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:text="@string/create_publication"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/please_sign_up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/rubik"
-                android:text="por favor inscreva-se para continuar"
-                android:textColor="@color/colorTitles"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />
-
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_photo_register"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="16dp"
-                android:src="@drawable/img_add_photo"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="2dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/please_sign_up" />
-
-            <Button
-                android:id="@+id/btn_photo_register"
-                android:layout_width="42dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="80dp"
-                android:background="@drawable/bg_button_img_rounded"
-                android:drawableStart="@drawable/icon_add_a_photo"
-                android:drawableTint="@android:color/white"
-                android:paddingLeft="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_photo_register"
-                app:layout_constraintStart_toStartOf="@+id/iv_photo_register" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView2"
+            <EditText
+                android:id="@+id/et_title"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_photo_register">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/img_customer_approach" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <EditText
-                android:id="@+id/et_name"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:hint="@string/name"
-                android:inputType="text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-            <EditText
-                android:id="@+id/et_email_address"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:drawableStart="@drawable/icon_email_24"
-                android:drawablePadding="10dp"
-                android:hint="@string/email_register"
-                android:inputType="textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-            <EditText
-                android:id="@+id/et_password"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:drawableStart="@drawable/icon_password_24"
-                android:drawablePadding="10dp"
-                android:hint="@string/password_register"
-                android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-            <EditText
-                android:id="@+id/et_postal_address"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:drawableStart="@drawable/icon_address"
-                android:drawablePadding="10dp"
-                android:hint="@string/address_register"
-                android:inputType="textPostalAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-            <EditText
-                android:id="@+id/et_birth_date"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="16dp"
-                android:drawableStart="@drawable/icon_calendar_24"
-                android:drawablePadding="10dp"
-                android:hint="@string/birth_date_register"
-                android:inputType="date"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-            <TextView
-                android:id="@+id/textView5"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:fontFamily="@font/rubik_bold"
-                android:text="Digite seu Nome Completo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
-
-            <TextView
-                android:id="@+id/textView6"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Digite seu Melhor Email"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_name" />
-
-            <TextView
-                android:id="@+id/textView7"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Digite uma Senha"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_email_address" />
-
-            <TextView
-                android:id="@+id/textView8"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Digite seu Endereço"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_password" />
-
-            <TextView
-                android:id="@+id/textView9"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Digite Sua Data de Nasc."
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_postal_address" />
-
-            <TextView
-                android:id="@+id/textView10"
-                style="@style/caption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/cpf_register"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_birth_date" />
-
-            <EditText
-                android:id="@+id/et_cpf"
-                style="@style/typingField"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:hint="@string/cpf_register"
-                android:inputType="numberSigned"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-            <Button
-                android:id="@+id/btn_register_client"
-                style="@style/buttonStyle"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="16dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/edge_field"
+                android:fontFamily="@font/rubik_bold"
+                android:hint="@string/title_publish"
+                android:paddingStart="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_create_publication" />
+
+            <EditText
+                android:id="@+id/description_publish"
+                android:layout_width="0dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/rubik"
+                android:hint="@string/description"
+                android:paddingStart="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_title" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/rubik_bold"
+                android:text="@string/image"
+                android:textColor="@color/colorTitles"
+                android:textSize="15sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/description_publish" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/button2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button2" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="15dp"
+                android:background="@color/colorBiometria"
+                android:drawableTop="@drawable/icon_publish"
+                android:drawableTint="@color/colorPrimary"
+                android:paddingTop="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <Spinner
+                android:id="@+id/spinner_urgency"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:entries="@array/urgency"
+                android:padding="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+            <Spinner
+                android:id="@+id/spinner_anuncy"
+                style="@style/Widget.AppCompat.Spinner.Underlined"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:entries="@array/qual_publication"
+                android:padding="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/spinner_urgency" />
+
+            <Button
+                android:id="@+id/btn_publish"
+                style="@style/buttonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/button_orange_rounded"
-                android:text="@string/create_an_account"
+                android:fontFamily="@font/rubik_bold"
+                android:padding="15dp"
+                android:text="@string/publish"
                 android:textColor="@android:color/white"
-                android:textSize="16dp"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_cpf" />
+                app:layout_constraintTop_toBottomOf="@+id/spinner_anuncy" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
